--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,12 @@
 
     <!-- Font Icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script>
+        var user = '{{ request.user }}'
+    </script>
+    <script src="https://www.paypal.com/sdk/js?client-id=dsdsd-&commit=false&debug=true"></script>
 </head>
 <body>
     <nav class="navbar">
@@ -27,19 +31,32 @@
                 </li>
             </ul>
             <ul class="navbar-right">
+                {% if user.is_authenticated %}
                 <li>
-                    <a href="#" class="">Login</a>
+                    <a href="{% url 'profile' %}" class="profile">Profile</a>
                 </li>
                 <li>
-                    <a href="#" class="">Register</a>
+                    <a href="{% url 'account_logout' %}" class="logout">Logout</a>
                 </li>
+                {% else %}
+                    <li>
+                        <a href="{% url 'login' %}" class="">Login</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'account_register' %}" class="">Register</a>
+                    </li>
+                {% endif %}
                 <li>
                     <a href="#" class="heart"><i class="fas fa-heart"></i></a>
                 </li>
                 <li>
-                    <a href="{% url 'checkout' %}" class="btn btn-green">
+                    <a href="{% url 'cart' %}" class="btn btn-green">
                         <i class="fas fa-shopping-cart"></i> 
-                        <span class="cart-quantity">0</span>
+                        {%if order %}
+                            <span class="cart-quantity">{{ order.get_cart_items }}</span>
+                        {% else %}
+                            <span class="cart-quantity">0</span>
+                        {% endif %}
                     </a>
                 </li>
             </ul>
@@ -69,13 +86,22 @@
                     <a href="#" class="btn"><i class="fas fa-heart heart-mobile"></i><span class="hear-text"></span>Lists</a>
                 </li>
                 <div class="line"></div>
-                <li>
-                    <a href="" class="btn btn-login"><i class="fas fa-solid fa-user"></i> Login</a>
-                    <a href class="btn">Register</a>
-                </li>
-                <li>
-                    
-                </li>
+                {% if user.is_authenticated %}
+                    <li>
+                        <a href="{% url 'profile' %}" class="profile">Profile</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'account_logout' %}" class="logout">Logout</a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a href="{% url 'login' %}" class="btn btn-login"><i class="fas fa-solid fa-user"></i> Login</a>
+                    </li>
+                    <li>
+                        <a href="{% url 'account_register' %}" class="btn"><i class="fas fa-user-plus"></i> Register</a>
+                    </li>
+                {% endif %}
+                
             </ul>
         </div>
     </nav>
@@ -83,7 +109,12 @@
   {% block content %}
 
   {% endblock %}
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <script>
+        paypal.Buttons().render('#paypal-button-container')
+    </script>
 
-  <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
+   
 </body>
 </html>
